--- a/abstract/B1-ABSTRACT.tex
+++ b/abstract/B1-ABSTRACT.tex
@@ -2,13 +2,8 @@
 \chapter*{\zihao{2}\heiti{摘~~~~要}}
 \vspace{-1cm}
 
-随着科技的发展，人们对无线宽带技术的需求日益增加。全球无线微波载入技术WiMAX(Worldwide Interoperability for Microwave Acess)是基于无线城域网络的新技术，实现了宽带接入技术和移动服务的相互结合。IEEE802.16m标准是在IEEE802.16e基础上的补充标准，定义了新一代WiMAX技术规范。由于无线系统使用完全开放和未实施保护的无线通信信道，因此需要在无线通信技术中实施可信和强健的安全加密保护实现通信的机密性，隐私性和完整性。
+随着物联网技术的发展,自主移动机器人(autonomous mobile robots)在网络中的作用也日益重要,利用形式化的方法验证自主移动机器人行为的正确性逐渐成为新的研究热点.当前主要的验证方法多以初始状态已知为前提且面临状态爆炸问题.本文以自主移动机器人空间永恒探索算法为例,提出自主移动机器人符号模型检测方法,该方法不依赖某个具体的初始状态,且适用于不同的同步模型.同时,借助符号模型检测的高效性,有效避免状态爆炸问题.利用nuXmv符号模型验证工具对机器人探索算法在三种同步模型:完全同步模型FSYNC(Full-synchronous model)、半同步模型SSYNC(semi-synchronous model)、异步模型ASYNC(Asynchronous model)进行建模并利用LTL公式定义算法的性质,最终实现算法的形式化验证.验证结果表明在假设初始状态未知的条件下依然可验证性质不被满足并找到反例.同时,实验数据表明了符号模型检测对自主移动机器人算法形式化验证的可行性与高效性.
 
-IEEE802.16m标准在MAC安全子层中定义了密钥管理PKMv3协议，实现基站与手机端间的双向认证以及安全密钥分发。在PKMv3协议中，基站作为服务端，手机站作为客户端，双方通过X.509数字证书实现身份验证，建立授权密钥，并通过安全组件协商，实现安全参数交换，最终通过密钥材料的传输，生成传输密钥以加密后续的通讯消息。PKMv3是改进后的第三代密钥管理协议，目前已有大量研究指出前两代协议中出现较多安全漏洞，并且针对第三代协议的研究仍然不够完善。因此，分析PKMv3协议的具体执行流程以及验证协议的安全特性十分关键。
-
-本文对安全协议的研究采用形式化建模的方式。安全协议的形式化方法采用数学模型，实现对协议结构以及通信过程的模拟，并通过有效的程序分析验证系统所满足的性质条件。Maude是基于重写逻辑的形式化建模语言，它定义了简洁且无二义性的语法，并且提供多种检测方法，适合作为编程语言，算法的分析工具以及系统建模工具。本文通过Maude定义的可执行形式化规范，实现对PKMv3协议中各执行阶段的建模。不同于现有的研究工作，本文考虑到协议执行过程中密钥的周期性质，在协议模型中加入时间机制模拟密钥重认证的过程，同时引入攻击者模型，模拟入侵者在网络中窃取，重放以及伪造消息的过程。
-
-基于编写完成的PKMv3协议可执行规范，本文通过LTL模型检测工具实现对协议连续性，密钥活性，认证密钥以及传输密钥生命周期等时间相关性质的检测；并通过穷尽空间状态查找指令实现对协议中机密性，认证性，完整性以及可用性等安全性质的验证。验证结果表明，PKMv3协议模型能够满足协议标准中的各项时间特性，但可能会遭遇到入侵者攻击，从而无法保证协议的完整性以及可用性。针对协议中的安全漏洞，本文在协议各阶段提出相应的解决方案，进而重新改写协议模型，证明改进后协议所满足的安全特性。
 
 \hspace{-0.5cm}
-\sihao{\heiti{关键词:}} \xiaosi{IEEE802.16m标准，PKMv3协议，密钥管理，重写逻辑，Maude语言，形式化验证}
+\sihao{\heiti{关键词:}} \xiaosi{nuXmv，移动机器人，空间探索，符号模型检测，形式化验证}
