--- a/suffix/D1-REFERENCE.tex
+++ b/suffix/D1-REFERENCE.tex
@@ -1,4 +1,24 @@
 \begin{thebibliography}{0}
+   \bibitem{r1}Bonnet F, Défago X, Petit F, et al. Brief Announcement, Discovering and Assessing Fine-Grained Metrics in Robot Networks Protocols. Stabilization, Safety, and Security of Distributed Systems. Springer Berlin Heidelberg, 2012:282-284
+   \bibitem{r2}Suzuki I, Yamashita M. Distributed Anonymous Mobile Robots: Formation of Geometric Patterns. Sirocco'96, the, International Colloquium on Structural Information & Communication Complexity, 1999:313-330.
+   \bibitem{r3}Suzuki I, Yamashita M. Erratum: Distributed anonymous mobile robots: formation of geometric patterns. Siam Journal on Computing, 1999, 28(4):1347-1363.
+   \bibitem{r4}Suzuki I, Yamashita M. Erratum: Distributed anonymous mobile robots: formation of geometric patterns. Siam Journal on Computing, 1999, 28(4):1347-1363.
+   \bibitem{r5}Blin L, Milani A, Potop-Butucaru M, et al. Exclusive Perpetual Ring Exploration without Chirality. Lecture Notes in Computer Science, 2010, 6343:312--327.
+   \bibitem{r6}Flocchini, Paola, Ilcinkas, et al. Computing Without Communicating: Ring Exploration by Asynchronous; Oblivious Robots. Algorithmica, 2013, 65(3):562-583.
+   \bibitem{r7}Kamei S, Lamani A, Ooshita F, et al. Asynchronous Mobile Robot Gathering from Symmetric Configurations without Global Multiplicity Detection. Lecture Notes in Computer Science, 2011, 6796:150-161.
+   \bibitem{r8}Flocchini P, Prencipe G, Santoro N, et al. Gathering of asynchronous robots with limited visibility. Theoretical Computer Science, 2005, 337(1):147-168.
+   \bibitem{r9}Baldoni R, Bonnet F, Milani A, et al. On the Solvability of Anonymous Partial Grids Exploration by Mobile Robots. Principles of Distributed Systems. Springer Berlin Heidelberg, 2008:428-445.
+   \bibitem{r10}Devismes S, Lamani A, Petit F, et al. Optimal Grid Exploration by Asynchronous Oblivious Robots. Symposium on Self-Stabilizing Systems. Springer Berlin Heidelberg, 2012:64-76.
+   \bibitem{r11}Clarke, E., Grumberg, O., Peled, D.: Model Checking. MIT Press, Cambridge, 2001.
+   \bibitem{r12}Bérard B, Lafourcade P, Millet L, et al. Formal verification of mobile robot protocols. Distributed Computing, 2013:1-29.
+   \bibitem{r13}Doan H T T, Bonnet F, Ogata K. Model Checking of a Mobile Robots Perpetual Exploration Algorithm. International Workshop on Structured Object-Oriented Formal Language and Method. Springer, Cham, 2016:201-219.
+   \bibitem{r14}Aminof, B., Kotek, T., Rubin, S., Spegni, F., Veith, H.: Parameterized model checking of rendezvous systems. In: Paolo, B., Daniele, G. (eds.) CONCUR 2014 Concurrency Theory, vol. 8704 of Lecture Notes in Computer Science, Springer, Berlin, 2014: 109–124
+   \bibitem{r15}Apt, K.R., Kozen, D. Limits for automatic verification of finitestate concurrent systems. Inf. Process. Lett. 1986,22(6):307–309.
+   \bibitem{r16}Clarke, E.M., Grumberg, O., Jha, S. Veryfying parameterized networks using abstraction and regular languages. In: Proceedings of 6th International Conference on Concurrency Theory (CONCUR’95), 1995, 962:395–407.
+   \bibitem{r17}Manna, Z., Pnueli, A. Temporal verification diagrams. In: Proceedings of International Conference on Theoretical Aspects of Computer Software (TACS’94), 1994, 789:726–765
+   \bibitem{r18}Clarke E M, Mcmillan K L, Hartonas-Garmhausen V. Symbolic Model Checking. International Conference on Computer Aided Verification. Springer-Verlag, 1996:419-427.
+   \bibitem{r19}Cavada R, Cimatti A, Dorigatti M, et al. The nuXmv Symbolic Model Checker. Computer Aided Verification. Springer International Publishing, 2014:334-342.
+   \bibitem{r20}Cavada R, Cimatti A, Dorigatti M, et al. The nuXmv Symbolic Model Checker. Computer Aided Verification. Springer International Publishing, 2014:334-342.
 
 		
 \end{thebibliography}
