--- a/abstract/B2-ABSTRACT-E.tex
+++ b/abstract/B2-ABSTRACT-E.tex
@@ -2,8 +2,13 @@
 \vspace{-1cm}
 \chapter*{\zihao{-2}\heiti{ABSTRACT}}
 \vspace{-0.5cm}
+In recent years, with the rapid developments of society and science, the role that autonomous mobile robots play in people's daily life .It has a wide range of applications in some areas,such as electronics industry、aerospace、automotive production and so on.As human activity space.With the expansion of human activity space,started to hope that autonomous mobile robots can explore unknown space in place of human.researchers envision groups of mobile robots self-organizing and cooperating to solving some predefined tasks,including exploration of unknown environments,without any central coordinating authority.
 
-With the development of Internet of Things technology, the role that autonomous mobile robots play in the network is becoming increasingly important. Formal verification of the correctness of autonomous mobile robots has become a new research topic. Most of the exising approaches either suffer state-explosion problem or rely on concrete initial states, which however are usually not undefined and have to be enumerated to make verification complete. In this paper, we propose a symbolic model checking approach to the formal verification of a typical automonous mobile robot system called mobile robot perpetual exploration system. For the symbolicity feature of the model checking, the verifcation does not rely on specific initial states and meanwhile state-explosion problem can be avoided. We use the state-of-the-art symbolic model checker nuXmv to verify the mobile robot perpetual exploration algorithm under three different scheduling modes called full synchronous model (FSYNC), semi-synchronous model (SSYNC) and asynchronous model (ASYNC). Experimental results show that even without providing specific initial states a counterexample can be found in our approach for the perpetual exploration property, which concides with the existing verification result which is obtained by model checking with specific initial states. Meanwhile, the experimental data shows the feasibility and efficiency of symbolic model checking in the formal verification of autonomous mobile robot systems.
+Exploration Algorithm is the core problem for the autonomous mobile robot to complete exploration task,the movement of robot depends on the exploration algorithm.In the past,the vast majority of research on mobile robots considers that mobile robots are locating in a continuous two-dimensional Euclidian space. A recent trend was to the discrete model take the place of the classical continuous mode. In the discrete model,there exist three different scheduling modes called full synchronous model(FSYNC), semi-synchronous model(SSYNC) and asynchronous model(ASYNC).There exist many research finding,such as the  Min-Algorithm、the Max-Algorithm and so on,depending on handwritten proofs,which, particularly in asynchronous execution models,are both cumbersome and error-prone.
+
+Formal methods for the automatic, rigorous and efficient has been used to verify the correctness of mobile autonomous robots algorithm。for example, using DiVinE and ITS tools to model check mobile robot protocols.and applying Maude to model the Min-Algorithm.
+
+We use the state-of-the-art symbolic model checker nuXmv to verify the mobile robot perpetual exploration algorithm under three different scheduling modes called full synchronous model (FSYNC), semi-synchronous model (SSYNC) and asynchronous model(ASYNC). Experimental results show that even without providing specific initial states a counterexample can be found in our approach for the perpetual exploration property, which concides with the existing verification result which is obtained by model checking with specific initial states. Meanwhile, the experimental data shows the feasibility and efficiency of symbolic model checking in the formal verification of autonomous mobile robot systems.
 
 \hspace{-0.5cm}
 
