--- a/index.tex
+++ b/index.tex
@@ -189,7 +189,7 @@
 \begin{document}
 \input cover/A1-COVER-C.tex
 \input cover/A2-COVER-E.tex
-\input copyright/A3-COPYRIGHT.tex
+%\input copyright/A3-COPYRIGHT.tex
 \input member/A4-MEMBERLIST.tex
 
 \newpage
@@ -234,7 +234,7 @@
 \cleardoublepage
 \phantomsection
 \addcontentsline{toc}{chapter}{致谢}
-\input suffix/D2-ACHNOWLEDGEMENT.tex
+%\input suffix/D2-ACHNOWLEDGEMENT.tex
 \pagestyle{plain}
 \cleardoublepage
 \phantomsection
