--- a/suffix/D1-REFERENCE.tex
+++ b/suffix/D1-REFERENCE.tex
@@ -1,24 +1,50 @@
 \begin{thebibliography}{0}
-   \bibitem{r1}Bonnet F, Défago X, Petit F, et al. Brief Announcement, Discovering and Assessing Fine-Grained Metrics in Robot Networks Protocols. Stabilization, Safety, and Security of Distributed Systems. Springer Berlin Heidelberg, 2012:282-284
-   \bibitem{r2}Suzuki I, Yamashita M. Distributed Anonymous Mobile Robots: Formation of Geometric Patterns. Sirocco'96, the, International Colloquium on Structural Information & Communication Complexity, 1999:313-330.
-   \bibitem{r3}Suzuki I, Yamashita M. Erratum: Distributed anonymous mobile robots: formation of geometric patterns. Siam Journal on Computing, 1999, 28(4):1347-1363.
+   \bibitem{r1}Flocchini P, Prencipe G, Santoro N. Distributed Computing by Oblivious Mobile Robots[J]. 2012, 3(2):1-185.
+   \bibitem{r2}Almeida A, Ramalho G, Santana H, et al. Recent Advances on Multi-agent Patrolling[C]// Advances in Artificial Intelligence - Sbia 2004, Brazilian Symposium on Artificial Intelligence, São Luis, Maranhão, Brazil, September 29 - October 1, 2004, Proceedings. DBLP, 2004:474-483.
+   \bibitem{r3}Suzuki I, Yamashita M. Distributed Anonymous Mobile Robots: Formation of Geometric Patterns. Sirocco'96, the, International Colloquium on Structural Information & Communication Complexity, 1999:313-330.
    \bibitem{r4}Suzuki I, Yamashita M. Erratum: Distributed anonymous mobile robots: formation of geometric patterns. Siam Journal on Computing, 1999, 28(4):1347-1363.
    \bibitem{r5}Blin L, Milani A, Potop-Butucaru M, et al. Exclusive Perpetual Ring Exploration without Chirality. Lecture Notes in Computer Science, 2010, 6343:312--327.
-   \bibitem{r6}Flocchini, Paola, Ilcinkas, et al. Computing Without Communicating: Ring Exploration by Asynchronous; Oblivious Robots. Algorithmica, 2013, 65(3):562-583.
-   \bibitem{r7}Kamei S, Lamani A, Ooshita F, et al. Asynchronous Mobile Robot Gathering from Symmetric Configurations without Global Multiplicity Detection. Lecture Notes in Computer Science, 2011, 6796:150-161.
-   \bibitem{r8}Flocchini P, Prencipe G, Santoro N, et al. Gathering of asynchronous robots with limited visibility. Theoretical Computer Science, 2005, 337(1):147-168.
-   \bibitem{r9}Baldoni R, Bonnet F, Milani A, et al. On the Solvability of Anonymous Partial Grids Exploration by Mobile Robots. Principles of Distributed Systems. Springer Berlin Heidelberg, 2008:428-445.
-   \bibitem{r10}Devismes S, Lamani A, Petit F, et al. Optimal Grid Exploration by Asynchronous Oblivious Robots. Symposium on Self-Stabilizing Systems. Springer Berlin Heidelberg, 2012:64-76.
-   \bibitem{r11}Clarke, E., Grumberg, O., Peled, D.: Model Checking. MIT Press, Cambridge, 2001.
-   \bibitem{r12}Bérard B, Lafourcade P, Millet L, et al. Formal verification of mobile robot protocols. Distributed Computing, 2013:1-29.
-   \bibitem{r13}Doan H T T, Bonnet F, Ogata K. Model Checking of a Mobile Robots Perpetual Exploration Algorithm. International Workshop on Structured Object-Oriented Formal Language and Method. Springer, Cham, 2016:201-219.
-   \bibitem{r14}Aminof, B., Kotek, T., Rubin, S., Spegni, F., Veith, H.: Parameterized model checking of rendezvous systems. In: Paolo, B., Daniele, G. (eds.) CONCUR 2014 Concurrency Theory, vol. 8704 of Lecture Notes in Computer Science, Springer, Berlin, 2014: 109–124
-   \bibitem{r15}Apt, K.R., Kozen, D. Limits for automatic verification of finitestate concurrent systems. Inf. Process. Lett. 1986,22(6):307–309.
-   \bibitem{r16}Clarke, E.M., Grumberg, O., Jha, S. Veryfying parameterized networks using abstraction and regular languages. In: Proceedings of 6th International Conference on Concurrency Theory (CONCUR’95), 1995, 962:395–407.
-   \bibitem{r17}Manna, Z., Pnueli, A. Temporal verification diagrams. In: Proceedings of International Conference on Theoretical Aspects of Computer Software (TACS’94), 1994, 789:726–765
-   \bibitem{r18}Clarke E M, Mcmillan K L, Hartonas-Garmhausen V. Symbolic Model Checking. International Conference on Computer Aided Verification. Springer-Verlag, 1996:419-427.
-   \bibitem{r19}Cavada R, Cimatti A, Dorigatti M, et al. The nuXmv Symbolic Model Checker. Computer Aided Verification. Springer International Publishing, 2014:334-342.
-   \bibitem{r20}Cavada R, Cimatti A, Dorigatti M, et al. The nuXmv Symbolic Model Checker. Computer Aided Verification. Springer International Publishing, 2014:334-342.
-
-		
+   \bibitem{r6}Devismes S, Petit F, Tixeuil S. Optimal Probabilistic Ring Exploration by Asynchronous Oblivious Robots[C]// International Conference on Structural Information and Communication Complexity. Springer-Verlag, 2009:195-208.
+   \bibitem{r7}Flocchini P, Ilcinkas D, Pelc A, et al. Computing Without Communicating: Ring Exploration by Asynchronous Oblivious Robots[M]// Principles of Distributed Systems. Springer Berlin Heidelberg, 2007:105-118.
+   \bibitem{r8}Flocchini P, Ilcinkas D, Pelc A, et al. Remembering without memory: Tree exploration by asynchronous oblivious robots[C]// International Colloquium on Structural Information and Communication Complexity. Springer Berlin Heidelberg, 2008:33-47.
+   \bibitem{r9}Baldoni R, Bonnet F, Milani A, et al. Brief Announcement: On the Solvability of Anonymous Partial Grids Exploration by Mobile Robots[C]// International Symposium on Distributed Computing. Springer-Verlag, 2008:496-497.
+   \bibitem{r10}Baldoni R, Bonnet F, Milani A, et al. On the Solvability of Anonymous Partial Grids Exploration by Mobile Robots. Principles of Distributed Systems. Springer Berlin Heidelberg, 2008:428-445.
+   \bibitem{r11}Devismes S, Lamani A, Petit F, et al. Optimal Grid Exploration by Asynchronous Oblivious Robots. Symposium on Self-Stabilizing Systems. Springer Berlin Heidelberg, 2012:64-76.
+   \bibitem{r12}Suzuki I, Yamashita M. Erratum: "Distributed anonymous mobile robots: formation of geometric patterns'' [SIAM J. Comput. 28 (1999), no. 4, 1347–1363 (electronic); MR1681010].[J]. Siam Journal on Computing, 2006, 36(4):279-280.
+   \bibitem{r13}Devismes S, Lamani A, Petit F, et al. Optimal grid exploration by asynchronous oblivious robots[J]. Lecture Notes in Computer Science, 2011, 7596:64-76.
+   \bibitem{r14}Potop-Butucaru M G, Potop-Butucaru M G. Brief announcement : discovering and assessing fine-grained metrics in robot networks protocols[C]// International Conference on Stabilization, Safety, and Security of Distributed Systems. Springer-Verlag, 2012:282-284.
+   \bibitem{r15}Halbwachs N, Caspi P, Raymond P, et al. The synchronous data flow programming language LUSTRE[J]. Proceedings of the IEEE, 2002, 79(9):1305-1320.
+   \bibitem{r16}Bérard B, Lafourcade P, Millet L, et al. Formal verification of mobile robot protocols[J]. Distributed Computing, 2016:1-29.
+   \bibitem{r17}Barnat J, Brim L, Havel V, et al. DiVinE 3.0 – An Explicit-State Model Checker for Multithreaded C & C++ Programs[C]// International Conference on Computer Aided Verification. Springer-Verlag, 2013:863-868.
+   \bibitem{r18}Colange M, Baarir S, Kordon F, et al. Towards Distributed Software Model-Checking Using Decision Diagrams[M]// Computer Aided Verification. Springer Berlin Heidelberg, 2013:830-845.
+   \bibitem{r19}Doan H T T, Bonnet F, Ogata K. Model Checking of a Mobile Robots Perpetual Exploration Algorithm[C]// International Workshop on Structured Object-Oriented Formal Language and Method. Springer-Verlag New York, Inc. 2016:201-219.
+   \bibitem{r20}Eker S, Meseguer J, Sridharanarayanan A. The Maude LTL Model Checker[J]. Electronic Notes in Theoretical Computer Science, 2004, 71(05):162-187.
+   \bibitem{r21}Clavel M, Durán F, Eker S, et al. All About Maude - A High-Performance Logical Framework[J]. 2007, 4350.
+   \bibitem{r22}Goranko V. Logic in Computer Science : Modelling and Reasoning About Systems[J]. Journal of Logic Language & Information, 2007, 16(1):117-120.
+   \bibitem{r23}Hagiya M, Mitchell J C. Proceedings of the International Conference on Theoretical Aspects of Computer Software[C]// International Conference on Theoretical Aspects of Computer Software. Springer-Verlag, 1994:257-271.
+   \bibitem{r24}Apt K R, Kozen D C. Limits for Automatic Verification of Finite-State Concurrent Systems.[J]. Information Processing Letters, 1986, 22(6):307-309.
+   \bibitem{r25}Clarke E M, Grumberg O, Jha S. Veryfying Parameterized Networks using Abstraction and Regular Languages[C]// International Conference on Concurrency Theory. Springer-Verlag, 1995:395-407.
+   \bibitem{r26}Bae K, Meseguer J. Model checking linear temporal logic of rewriting formulas under localized fairness[J]. Science of Computer Programming, 2015, 99:193-234.
+   \bibitem{r27}Cavada R, Cimatti A, Dorigatti M, et al. The nuXmv Symbolic Model Checker[C]// International Conference on Computer Aided Verification. Springer-Verlag New York, Inc. 2014:334-342.
+   \bibitem{r28}Clarke, E., Grumberg, O., Peled, D.: Model Checking. MIT Press, Cambridge, 2001.
+   \bibitem{r29}Bonnet F, Potop-Butucaru M, Tixeuil S. Asynchronous Gathering in Rings with 4 Robots[M]// Ad-hoc, Mobile, and Wireless Networks. Springer International Publishing, 2016.
+   \bibitem{r31}D’Angelo G, Stefano G D, Navarra A, et al. Computing on Rings by Oblivious Robots: A Unified Approach for Different Tasks[J]. Algorithmica, 2015, 72(4):1055-1096.
+   \bibitem{r33}Huth M, Ryan M D. Logic in computer science - modelling and reasoning about systems (2. ed.)[J]. Ceskoslovenská Oftalmologie, 2004, 29(4):295-7.
+   \bibitem{r34}Kawamura A, Kobayashi Y. Fence Patrolling by Mobile Agents with Distinct Speeds[C]// International Symposium on Algorithms and Computation. Springer Berlin Heidelberg, 2012:598-608.
+   \bibitem{r36}Suzuki I, Yamashita M. Distributed Anonymous Mobile Robots: Formation of Geometric Patterns.[C]// Sirocco'96, the, International Colloquium on Structural Information & Communication Complexity, Siena, Italy, June. DBLP, 1999:313-330.
+   \bibitem{r37}Clerentin A, Delahoche L, Brassart E, et al. Imprecision and Uncertainty Quantification for the Problem of Mobile Robot Localization[J]. Autonomous Robots, 2008, 24(3):267-283.
+   \bibitem{r38}D'Angelo G, Stefano G D, Navarra A. Gathering of Six Robots on Anonymous Symmetric Rings[M]// Structural Information and Communication Complexity. Springer Berlin Heidelberg, 2011:174-185.
+   \bibitem{r39}Kamei S, Lamani A, Ooshita F, et al. Gathering an Even Number of Robots in an Odd Ring without Global Multiplicity Detection[M]// Mathematical Foundations of Computer Science 2012. Springer Berlin Heidelberg, 2012:542-553.
+   \bibitem{r40}Flocchini P, Prencipe G, Santoro N, et al. Gathering of asynchronous robots with limited visibility ☆[J]. Theoretical Computer Science, 2005, 337(1):147-168.
+   \bibitem{r41}Millet L, Potop-Butucaru M, Sznajder N, et al. On the Synthesis of Mobile Robots Algorithms: The Case of Ring Gathering[J]. Computer Science, 2014, 8756:237-251.
+   \bibitem{r41}D'Angelo G, Stefano G D, Navarra A. How to gather asynchronous oblivious robots on anonymous rings[C]// International Conference on Distributed Computing. Springer-Verlag, 2012:326-340.
+   \bibitem{r42}D’Angelo G, Stefano G D, Navarra A. Gathering on rings under the Look–Compute–Move model[J]. Distributed Computing, 2014, 27(4):255-285.
+   \bibitem{r43}D'Angelo G, Stefano G D, Navarra A. Gathering six oblivious robots on anonymous symmetric rings ☆, ☆☆[J]. Journal of Discrete Algorithms, 2014, 26:16-27.
+   \bibitem{r45}D’Angelo G, Navarra A, Nisse N. Gathering and Exclusive Searching on Rings under Minimal Assumptions[C]// International Conference on Distributed Computing and Networking. Springer Berlin Heidelberg, 2014:149-164.
+   \bibitem{r46}Stefano G D, Montanari P, Navarra A. About Ungatherability of Oblivious and Asynchronous Robots on Anonymous Rings[M]// Combinatorial Algorithms. Springer International Publishing, 2015.
+   \bibitem{r47}Izumi T, Izumi T, Kamei S, et al. Time-Optimal Gathering Algorithm of Mobile Robots with Local Weak Multiplicity Detection in Rings[J]. Ieice Transactions on Fundamentals of Electronics Communications & Computer Sciences, 2013, E96.A(6):1072-1080.
+   \bibitem{r48}Kamei S, Lamani A, Ooshita F, et al. Asynchronous Mobile Robot Gathering from Symmetric Configurations without Global Multiplicity Detection[J]. 2011, 6796:150-161.
+   \bibitem{r50}Klasing R, Kosowski A, Navarra A. Taking Advantage of Symmetries: Gathering of many Asynchronous Oblivious Robots on a Ring[C]// Principles of Distributed Systems, International Conference, Opodis 2008, Luxor, Egypt, December 15-18, 2008. Proceedings. DBLP, 2010:446-462.
+   \bibitem{r51}Mostéfaoui A, Rajsbaum S, Raynal M, et al. Condition-based consensus solvability: a hierarchy of conditions and efficient protocols[J]. Distributed Computing, 2004, 17(1):1-20.
+   \bibitem{r51}Ooshita F, Tixeuil S. On the self-stabilization of mobile oblivious robots in uniform rings ☆[J]. Theoretical Computer Science, 2015, 568(C):84-96.
 \end{thebibliography}
