--- a/abstract/B1-ABSTRACT.tex
+++ b/abstract/B1-ABSTRACT.tex
@@ -2,14 +2,15 @@
 \chapter*{\zihao{2}\heiti{摘~~~~要}}
 \vspace{-1cm}
 
-近年来，人类社会不断进步和科学技术飞速发展，机器人逐渐步入了人们的生活。尤其是在电子工业生产、航空航天、汽车生产等领域有着广泛的应用。随着人类活动空间的不断扩大，人类自身的机体能力有限的情况下，寄希望于移动机器人(autonomous mobile robots)能代替人自主完成空间探索任务，即机器人根据预设的移动算法，自主根据空间环境中其他机器人的位置，做出对应的移动策略，空间中所有机器人互相协作完成对未知空间的探索。因为机器人在预设定移动算法之后，没有人为进行干预其移动过程，所以这种类型的机器人称为自主移动机器人。
+20世纪70年代末，随着智能机器人学、传感技术和分布式系统的快速发展，自主移动机器人(autonomous mobile robots)逐渐步入了人类的生活当中，尤其是在工业生产、空间探索和军事等领域得到了广泛的应用。多自主移动机器人协作对未知空间探索问题是近期该领域的一个研究热点。
 
-根据具体的物理空间定义移动算法是自主移动机器人完成指定探索任务的核心问题，机器人移动算法决定了机器人的移动行为。移动空间模型由原始的连续二维欧几里德空间模型，逐渐演化成为有限位置的离散空间模型。对于机器人移动过程有三种调度模型：完全同步模型FSYNC(Full-synchronous model)、 半同步调度模型SSYNC(Semi-synchronous model)、 异步调度模型ASYNC(Asynchronous model)。离散空间模型下，已经有了最小移动算法、最大移动算法以及其他的相关研究成果，之前对于这些研究问题的验证过程使用的是手动推演的方式，然而手动推演不仅过程冗长复杂,推演过程中也容易出现错误. 尤其对于异步调度模型,存在快照过时的情况,根本无法使用手动推演的方式进行推演验证。
+移动算法是多自主移动机器人协作完成空间探索问题的核心，自主移动机器人通过视觉传感器获取周围环境中其他机器人的位置信息，将位置信息与移动算法进行匹配，做出对应的移动决策。未知空间模型由连续二维欧几里德空间模型，逐渐演化成为有限位置的离散空间模型。在离散空间模型中，机器人有三种调度模型：完全同步模型FSYNC(Full-synchronous model)、 半同步调度模型SSYNC(Semi-synchronous model)、 异步调度模型ASYNC(Asynchronous model)。验证不同调度模型下，移动算法是否满足空间探索性质大多数使用的是手动推演的方法，手动推演的方式不仅过程冗长复杂，而且演算过程中容易出现错误。对于异步调度模型中，由于存在使用过时环境位置信息作为移动决策依据的情况，根本无法使用手动推演的方式进行验证。
 
-形式化方法因其自动性,严谨性与高效性逐渐被用于各种自主机器人移动算法的验证。使用DVE形式化语言描述机器人移动算法，在模型检测工具DiVinE 和ITS 中进行验证移动算法是否满足永恒探索。同时也有使用基于重写逻辑的Muade形式化建模语言，进行移动算法的建模，验证异步调度调度模型中最小移动算法是否满足永恒探索。
+而形式化验证方法因其自动性、高效性和严谨性，弥补了手动推演的不足之处，逐渐被用于各种自主移动机器人算法的验证。近期，B Bérard使用DVE形式化语言对机器人移动算进行了建模，并使用DiVinE和ITS形式化工具验证了机器人移动算法模型是否满足永恒探索性质。另外，Ha等人使用 Maude重写逻辑形式化语言实现移动机器人永恒探索算法的验证。已知的这些方法多针对某
+种特定的调度模型进行建模,并通过人为设定一个具体的初始状态进行验证.然而自主移动机器人算法
+中系统的初始状态多是未知的。
 
-本文以验证自主移动机器人空间永恒探索算法为例,提出自主移动机器人符号模型检测方法,该方法不依赖某个具体的初始状态,且适用于不同的调度模型.同时,借助符号模型检测的高效性,有效避免状态爆炸问题.利用nuXmv 符号模型验证工具对机器人探索算法在三种调度模型:完全同步模型、半同步模型SSYNC、异步模型进行建模并利用LTL公式定义算法的永恒探索性质,最终实现移动算法的形式化验证.验证结果表明在假设初始状态未知的条件下依然可验证性质不被满足并找到反例.同时,实验数据表明了符号模型检测对自主移动机器人算法形式化验证的可行性与高效性.
-
+本文提出自主移动机器人符号模型检测方法,该方法不依赖某个具体的初始状态,且适用于不同的调度模型.同时,借助符号模型检测的高效性,有效避免状态爆炸问题.利用nuXmv 符号模型验证工具对机器人探索算法在三种调度模型:完全同步模型、半同步模型SSYNC、异步模型进行建模并利用LTL公式定义算法的永恒探索性质,最终实现移动算法的形式化验证.验证结果表明在假设初始状态未知的条件下依然可验证性质不被满足并找到反例.同时,实验数据表明了符号模型检测对自主移动机器人算法形式化验证的可行性与高效性.
 
 \hspace{-0.5cm}
 \sihao{\heiti{关键词:}} \xiaosi{nuXmv，移动机器人，空间探索，符号模型检测，形式化验证}
