--- a/suffix/D1-REFERENCE.tex
+++ b/suffix/D1-REFERENCE.tex
@@ -1,5 +1,9 @@
 \begin{thebibliography}{0}
-   \bibitem{r1}Flocchini P, Prencipe G, Santoro N. Distributed Computing by Oblivious Mobile Robots[J]. 2012, 3(2):1-185.
+   \bibitem{rr1}贺伟. 未知环境中移动机器人的自定位算法研究[D]. 中南大学, 2005.
+   \bibitem{rr2}杨敏. 轮式移动机器人控制算法研究及其伺服系统设计[D]. 南京航空航天大学, 2014.
+   \bibitem{rr3}Bryant R E. Bryant, R.E.: Graph-Based Algorithms for Boolean Function Manipulation. IEEE Trans. Computers 35(8), 677-691[J]. 1986, C-35(8):677-691.
+   \bibitem{rr4}Cimatti A, Griggio A, Schaafsma B J, et al. The MathSAT5 SMT Solver[J]. 2013.
+   \bibitem{r1}Flocchini P, Prencipe G, Santoro N. Distributed Computing by Oblivious Mobile Robots[J]. 2012, 3(2):1-185.  
    \bibitem{r2}Almeida A, Ramalho G, Santana H, et al. Recent Advances on Multi-agent Patrolling[C]// Advances in Artificial Intelligence - Sbia 2004, Brazilian Symposium on Artificial Intelligence, São Luis, Maranhão, Brazil, September 29 - October 1, 2004, Proceedings. DBLP, 2004:474-483.
    \bibitem{r3}Suzuki I, Yamashita M. Distributed Anonymous Mobile Robots: Formation of Geometric Patterns. Sirocco'96, the, International Colloquium on Structural Information & Communication Complexity, 1999:313-330.
    \bibitem{r4}Suzuki I, Yamashita M. Erratum: Distributed anonymous mobile robots: formation of geometric patterns. Siam Journal on Computing, 1999, 28(4):1347-1363.
@@ -47,4 +51,5 @@
    \bibitem{r50}Klasing R, Kosowski A, Navarra A. Taking Advantage of Symmetries: Gathering of many Asynchronous Oblivious Robots on a Ring[C]// Principles of Distributed Systems, International Conference, Opodis 2008, Luxor, Egypt, December 15-18, 2008. Proceedings. DBLP, 2010:446-462.
    \bibitem{r51}Mostéfaoui A, Rajsbaum S, Raynal M, et al. Condition-based consensus solvability: a hierarchy of conditions and efficient protocols[J]. Distributed Computing, 2004, 17(1):1-20.
    \bibitem{r51}Ooshita F, Tixeuil S. On the self-stabilization of mobile oblivious robots in uniform rings ☆[J]. Theoretical Computer Science, 2015, 568(C):84-96.
+       
 \end{thebibliography}
