--- a/suffix/D3-MYACHIEVEMENTS.tex
+++ b/suffix/D3-MYACHIEVEMENTS.tex
@@ -2,3 +2,5 @@
 \section*{\centering{\songti{攻读硕士学位期间发表论文和科研情况}}}
 \vskip 0mm
 {\heiti $\blacksquare$ 已公开发表论文}\vskip 5mm
+
+[1] 自主移动机器人空间永恒探索算法的符号模型检测方法. FMAC, 2017
